viewed json json through table

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <table id="tblCustomers" border="1"></table>
 
     <script src="app.js"></script>
 </body>
