created form and pass the values from input fields

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div>
+        <input type="text" id="txtId" placeholder="ID">
+        <input type="text" id="txtName" placeholder="Name">
+        <input type="text" id="txtAddress" placeholder="Address">
+        <input type="text" id="txtEmail" placeholder="Email">
+        <input type="text" id="txtSalary" placeholder="Salary">
+        <input type="button" value="Add Customer" onclick="AddCustomer()">
+    </div>
     <table id="tblCustomers" border="1"></table>
 
     <script src="app.js"></script>
