--- a/index.html
+++ b/index.html
@@ -4,19 +4,77 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Customer Management System</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
-        <input type="text" id="txtId" placeholder="ID">
-        <input type="text" id="txtName" placeholder="Name">
-        <input type="text" id="txtAddress" placeholder="Address">
-        <input type="text" id="txtEmail" placeholder="Email">
-        <input type="text" id="txtSalary" placeholder="Salary">
-        <input type="button" value="Add Customer" onclick="AddCustomer()">
-    </div>
-    <table id="tblCustomers" border="1"></table>
+    <div class="container py-4">
+        <div class="d-flex justify-content-between align-items-center mb-3">
+            <nav>
+                <div class="nav nav-pills" id="viewTabs" role="tablist">
+                    <button class="nav-link active" id="tab-add" type="button">Add Customer</button>
+                    <button class="nav-link" id="tab-list" type="button">Customer List</button>
+                </div>
+            </nav>
+            <h1 class="mb-0">Customer Management</h1>
+        </div>
+        <div id="alertPlaceholder"></div>
 
+        <div class="card mb-4">
+            <div class="card-body">
+                <form id="customerForm" class="row g-3">
+                    <div class="col-md-2">
+                        <label for="txtId" class="form-label">ID</label>
+                        <input type="text" class="form-control" id="txtId" placeholder="e.g., C001" required>
+                    </div>
+                    <div class="col-md-4">
+                        <label for="txtName" class="form-label">Name</label>
+                        <input type="text" class="form-control" id="txtName" placeholder="Name" required>
+                    </div>
+                    <div class="col-md-6">
+                        <label for="txtAddress" class="form-label">Address</label>
+                        <input type="text" class="form-control" id="txtAddress" placeholder="Address">
+                    </div>
+                    <div class="col-md-4">
+                        <label for="txtEmail" class="form-label">Email</label>
+                        <input type="email" class="form-control" id="txtEmail" placeholder="name@example.com">
+                    </div>
+                    <div class="col-md-3">
+                        <label for="txtSalary" class="form-label">Salary</label>
+                        <div class="input-group">
+                            <span class="input-group-text">$</span>
+                            <input type="text" class="form-control salary-input" id="txtSalary" placeholder="0.00" inputmode="decimal" pattern="[0-9.,]*">
+                        </div>
+                    </div>
+                    <div class="col-12 text-end">
+                        <button type="submit" class="btn btn-primary">Add Customer</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card-body">
+                <div class="table-responsive">
+                    <table class="table table-striped table-hover" id="tblCustomers">
+                        <thead class="table-dark">
+                            <tr>
+                                <th>ID</th>
+                                <th>Name</th>
+                                <th>Address</th>
+                                <th>Email</th>
+                                <th class="text-end">Salary</th>
+                            </tr>
+                        </thead>
+                        <tbody id="tblCustomersBody"></tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+
+    </div> <!-- /.container -->
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
