--- a/index.html
+++ b/index.html
@@ -9,18 +9,20 @@
 </head>
 <body>
     <div class="container py-4">
-        <div class="d-flex justify-content-between align-items-center mb-3">
-            <nav>
-                <div class="nav nav-pills" id="viewTabs" role="tablist">
+        <header class="site-header text-center mb-4">
+            <h1 class="display-5 fw-bold text-success main-title">Customer Management System</h1>
+            <p class="lead text-muted">Manage customers quickly and securely</p>
+            <div class="mt-3">
+                <div class="nav nav-pills justify-content-center" id="viewTabs" role="tablist">
                     <button class="nav-link active" id="tab-add" type="button">Add Customer</button>
                     <button class="nav-link" id="tab-list" type="button">Customer List</button>
                 </div>
-            </nav>
-            <h1 class="mb-0">Customer Management</h1>
-        </div>
+            </div>
+        </header>
         <div id="alertPlaceholder"></div>
 
-        <div class="card mb-4">
+        <div class="card mb-4" id="panel-add">
+            <div class="card-header card-header-custom">Add Customer</div>
             <div class="card-body">
                 <form id="customerForm" class="row g-3">
                     <div class="col-md-2">
@@ -53,11 +55,12 @@
             </div>
         </div>
 
-        <div class="card">
+        <div class="card" id="panel-list" style="display:none;">
+            <div class="card-header card-header-custom">Customer List</div>
             <div class="card-body">
                 <div class="table-responsive">
                     <table class="table table-striped table-hover" id="tblCustomers">
-                        <thead class="table-dark">
+                        <thead>
                             <tr>
                                 <th>ID</th>
                                 <th>Name</th>
