--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         </div>
                     </div>
                     <div class="col-12 text-end">
-                        <button type="submit" class="btn btn-primary">Add Customer</button>
+                        <button type="submit" class="btn btn-primary" style="background-color: #015c3f">Add Customer</button>
                     </div>
                 </form>
             </div>
